--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-css-loaders": "^0.0.6",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-helmet-async": "^1.3.0",
+    "react-hot-toast": "^2.2.0",
     "react-loading": "^2.0.3",
     "react-modal": "^3.15.1",
     "react-native-indicator": "^1.2.2",
